test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-15 21:50:45.489423

